--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Columns</title>
+    <title>CSS Grid Layout</title>
     <link rel="stylesheet" href="" />
     <style>
       body {
@@ -11,7 +11,10 @@
       }
       .container {
         display: grid;
-        grid-template-columns: 33% 33% 33%;
+        /* grid-template-columns: 33% 33% 33%;
+        grid-template-rows: 100px 100px 50px 70px; */
+        /* grid-template: rows / columns; */
+        grid-template: 100px 100px 50px 70px / 33% 33% 33%;
       }
       .item {
         background: lightblue;
