CSS Grid - Row and column spacing

--- a/index.html
+++ b/index.html
@@ -15,11 +15,17 @@
         grid-template-rows: 100px 100px 50px 70px; */
         /* grid-template: rows / columns; */
         grid-template: 100px 110px 70px / 33% 33% 33%;
+        /* grid-column-gap: 30px;
+        grid-row-gap: 30px; */
+        /* grid-gap: 10px 10px; */
+        gap: 10px 20px;
       }
       .item {
         background: lightblue;
         padding: 10px;
         border: 1px solid red;
+        /* margin-right: 10px;
+        margin-bottom: 10px; */
       }
       .item:nth-of-type(4) {
         background: indigo;
