CSS Grid - Fractions (fr)

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         /* grid-template-columns: 33% 33% 33%;
         grid-template-rows: 100px 100px 50px 70px; */
         /* grid-template: rows / columns; */
-        grid-template: 100px 110px 70px / 33% 33% 33%;
+        grid-template: 100px 110px 70px / 1fr 1fr 1fr;
         /* grid-column-gap: 30px;
         grid-row-gap: 30px; */
         /* grid-gap: 10px 10px; */
