CSS Grid - Function:Use minmax() without repeat()

--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
         grid-template-rows: 100px 100px 50px 70px; */
         /* grid-template: rows / columns; */
         /* grid-template: 100px 110px 70px / 1fr 1fr 1fr; */
-        grid-template: 100px 110px 70px / repeat(4, 1fr);
+        /* grid-template: 100px 110px 70px / repeat(4, 1fr); */
+        /* grid-template: 100px 110px 70px / repeat(4, minmax(200px, 1fr)); */
+        grid-template: 100px 110px 70px / minmax(200px, 1fr) 1fr 1fr 1fr;
         /* grid-column-gap: 30px;
         grid-row-gap: 30px; */
         /* grid-gap: 10px 10px; */
